# pyvibe

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: CNAME  about.html  component_reference.html  flask.html  gallery.html  hero.html  index.html  login.html  playground.html  tutorial.html
docs/gallery/: card.html  chart.html  form.html  grid.html  index.html  table.html
generator/: generate.py  generate.swift  screenshot.py
generator/docs/: about.py  component_reference.py  flask.py  gallery.py  index.py  login.py  playground.py  tutorial.py
generator/docs/common/: components.py
generator/gallery/: card.py  chart.py  form.py  grid.py  index.py  table.py
generator/includes/: advanced.py.txt
integration_tests/: flask_test.py
sample-apps/pypi-analytics/: Makefile  Procfile  main.py  requirements.txt
sample-apps/websockets/: main.py  requirements.txt
spec/: spec.json
src/pagebuilder/: __init__.py
src/pyvibe/: __init__.py  component_interface.py
