[project]
name = "pyvibe"
version = "0.0.3"
authors = [
  { name="Zain Hoda", email="zain@pycob.com" },
]
description = "Python UI for Web Apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pycob/pyvibe"
"Bug Tracker" = "https://github.com/pycob/pyvibe/issues"